Tmux pane resizing binds

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -47,6 +47,11 @@ bind-key "+" split-window -v -c "#{pane_current_path}"
 
 bind c new-window -c "#{pane_current_path}"
 
+bind-key -r "º" resize-pane -L 5
+bind-key -r "´" resize-pane -R 5
+bind-key -r "~" resize-pane -D 5
+bind-key -r "\\" resize-pane -U 5
+
 
 #set-option utf8-default on
 #set-option -g mouse-select-pane
