--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,40 +1,32 @@
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-sidebar'
-set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'jsec/tmux-paper-color'
 
-set -g default-terminal "tmux-256color"
-set -g default-shell "/bin/{{shell_command}}"
-set -g terminal-overrides ',xterm-256color:RGB'
+set -g @continuum-restore 'on'
+set -g default-shell "/opt/homebrew/bin/fish"
+#set -g @plugin "janoamaral/tokyo-night-tmux"
+
+# Colors
+ set -g default-terminal "tmux-256color"
+ set -g terminal-overrides ',xterm-256color:RGB'
 
 
 
-set -g set-titles on
-set -g set-titles-string "#W #{command} #T #{session_path}"
-set -g escape-time 10
-set -g focus-events on
+
 
 # Set window notifications
 set -g monitor-activity on
 set -g visual-activity on
-
+set -g mouse on
 # History limit
 set -g history-limit 5000
-
-# Mouse on
-set -g mouse on
-set-option -g status-position bottom
-set-option -g status on
-set-option -g status-interval 1
-set-option -g automatic-rename on
-set-option -g automatic-rename-format '#{pane_current_path}'
 
 unbind C-b
 unbind C-s
 set -g prefix C-s
 bind C-s send-prefix
-
 
 bind -r k select-pane -U 
 bind -r j select-pane -D 
@@ -47,22 +39,8 @@ bind-key "+" split-window -v -c "#{pane_current_path}"
 
 bind c new-window -c "#{pane_current_path}"
 
-bind-key -r "º" resize-pane -L 5
-bind-key -r "´" resize-pane -R 5
-bind-key -r "~" resize-pane -D 5
-bind-key -r "\\" resize-pane -U 5
-
-
-#set-option utf8-default on
-#set-option -g mouse-select-pane
 set-window-option -g mode-keys vi
-#set-window-option -g utf8 on
-# look'n feel
 
 
 set -sg escape-time 10
-source ~/tmuxline
-set -g default-terminal "tmux-256color"
-set -g default-shell "/bin/{{shell_command}}"
-set -g terminal-overrides ',xterm-256color:RGB'
-run '~/.tmux/plugins/tpm/tpm'
+source ~/dotfiles/tmux/tmux_line
