fixed tmux issues

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,16 +1,22 @@
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'jsec/tmux-paper-color'
 
 set -g @continuum-restore 'on'
 set -g default-shell "/opt/homebrew/bin/fish"
 #set -g @plugin "janoamaral/tokyo-night-tmux"
 
-# Colors
- set -g default-terminal "tmux-256color"
- set -g terminal-overrides ',xterm-256color:RGB'
+set -g default-terminal "xterm-256color"
+
+# add support for truecolor
+# more info here: https://github.com/ninrod/tricks/blob/master/shell/tmux.md#the-standard-way-since-tmux-22
+# tmux issue: https://github.com/tmux/tmux/issues/34
+# fixed since version 2.2
+# credits to github user sunaku: http://github.com/sunaku 
+# usage instructions: http://sunaku.github.io/tmux-24bit-color.html#usage
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 
 
@@ -44,3 +50,4 @@ set-window-option -g mode-keys vi
 
 set -sg escape-time 10
 source ~/dotfiles/tmux/tmux_line
+run '~/.tmux/plugins/tpm/tpm'
