--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -50,4 +50,5 @@ set-window-option -g mode-keys vi
 
 set -sg escape-time 10
 source ~/dotfiles/tmux/tmux_line
+set -g status-position top
 run '~/.tmux/plugins/tpm/tpm'
