switch to ghosty and zsh; re configure neovim

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,7 +14,7 @@ set -g default-terminal "xterm-256color"
 # more info here: https://github.com/ninrod/tricks/blob/master/shell/tmux.md#the-standard-way-since-tmux-22
 # tmux issue: https://github.com/tmux/tmux/issues/34
 # fixed since version 2.2
-# credits to github user sunaku: http://github.com/sunaku 
+# credits to github user sunaku: http://github.com/sunaku
 # usage instructions: http://sunaku.github.io/tmux-24bit-color.html#usage
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
@@ -25,7 +25,7 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 # Set window notifications
 set -g monitor-activity on
 set -g visual-activity on
-set -g mouse on
+setw -g mouse on
 # History limit
 set -g history-limit 5000
 
@@ -34,9 +34,9 @@ unbind C-s
 set -g prefix C-s
 bind C-s send-prefix
 
-bind -r k select-pane -U 
-bind -r j select-pane -D 
-bind -r h select-pane -L 
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
 bind -r l select-pane -R
 
 
